# incan74re

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: bindings.rs  bit_operations.rs  bwd.rs  counting.rs  entropy_ranking.rs  fast_log2.rs  file_operations.rs  incan74re.rs  main.rs  match_finder.rs  mdma.rs  parser.rs  splitting.rs
